--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
 script:
   - (cd /home/travis && wget https://github.com/pybind/pybind11/archive/v2.2.4.zip)
   - (cd /home/travis && unzip v2.2.4.zip && cd pybind11-2.2.4 && sudo python3 setup.py install)
-  - source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
+  - source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py --include-dirs /usr/local/include/python3.6/ build
 
 branches:
   only:
