--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       env: COMPILER='gcc-8'
 
 before_script:
-  - sudo pip install pybind11
+  - sudo pip3 install pybind11
   - (cd /home/travis && wget http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
   - (cd /home/travis && wget http://104.245.35.234/files/tuxedo122.rsp)
   - (cd /home/travis && unzip tuxedo122200_64_Linux_01_x86.zip)
