--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ matrix:
       compiler: gcc
       addons:
         apt:
-          packages: ['gcc-8', 'python3-setuptools', 'openjdk-8-jdk']
+          packages: ['gcc-8', 'python3-pip', 'python3-setuptools', 'openjdk-8-jdk']
       env: COMPILER='gcc-8'
 
 before_script:
   - sudo pip3 install pybind11
-  - sudo pip3 install setuptools
   - (cd /home/travis && wget http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
   - (cd /home/travis && wget http://104.245.35.234/files/tuxedo122.rsp)
   - (cd /home/travis && unzip tuxedo122200_64_Linux_01_x86.zip)
