--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 dist: bionic
 language: c
 
-addons:
-  hostname: short-hostname
-
 matrix:
   include:
     - os: linux
@@ -22,6 +19,7 @@ before_script:
 
 script:
   - source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
+  - sudo hostname tuxbuild
   - source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && sudo python3 setup.py install
   - source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo && make
 
