tpimport and tpexport
also support binary strings (non-utf8) by using surrogateescape codec
typo fix tpgetrpy() -> tpgetrply()
silently skip None in dict -> FML32 conversion

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -9,11 +9,15 @@ export FLDTBLDIR32=$(TUXDIR)/udataobj:$(CURDIR)
 export FIELDTBLS32=tpadm,demo
 
 default: tuxconfig
+	./buf.py
 	tmboot -y
 	curl -X POST --data '{"USD": "5"}' localhost:8000
 	@echo
 	./client.py
 	tmshutdown -y
+
+buf:
+	./buf.py
 
 ubbconfig: ubbconfig.in
 	cat $< \
