--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         run: sudo pip3 install pybind11
       - name: Install Tuxedo
         run: |
-          wget http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip
-          wget http://104.245.35.234/files/tuxedo122.rsp
-          sed -i s/travis/runner/g tuxedo122.rsp
-          unzip tuxedo122200_64_Linux_01_x86.zip
+          (cd && wget -q http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
+          (cd && wget -q http://104.245.35.234/files/tuxedo122.rsp)
+          (cd && sed -i s/travis/runner/g tuxedo122.rsp)
+          (cd && unzip tuxedo122200_64_Linux_01_x86.zip)
           (cd ~/Disk1/install && JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 ./runInstaller.sh -silent -responseFile ~/tuxedo122.rsp -ignoreSysPrereqs -waitforcompletion)
