--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,29 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-18.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Install dependencies
         run: sudo apt-get install gcc-8 python3-pip python3-setuptools openjdk-8-jdk
       - uses: actions/checkout@v2
       - name: Install pybind11
         run: sudo pip3 install pybind11
-      - name: Install Tuxedo
+      - name: Install Oracle Tuxedo
         run: |
-          whoami && groups
           (cd && wget -q http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
           (cd && wget -q http://104.245.35.234/files/tuxedo122.rsp)
-          (cd && sed -i s/"travis"/"docker"/g tuxedo122.rsp)
-          (cd && sed -i s/travis/runner/g tuxedo122.rsp)
           (cd && unzip tuxedo122200_64_Linux_01_x86.zip)
           (cd ~/Disk1/install && JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 ./runInstaller.sh -silent -responseFile ~/tuxedo122.rsp -ignoreSysPrereqs -waitforcompletion)
-      - name: Build module
-        run: source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
-      - name: Install module
-        run: source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && sudo python3 setup.py install
+      - name: Build tuxedo module
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
+      - name: Install tuxedo module
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo python3 setup.py install
       - name: Run demo code
-        run: source /home/travis/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo && make
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo && make
