--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build tuxedo module
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
       - name: Install tuxedo module
-        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo python3 setup.py install
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo -E python3 setup.py install
       - name: Run demo code
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo && make
