--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           (cd && unzip tuxedo122200_64_Linux_01_x86.zip)
           (cd ~/Disk1/install && JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 ./runInstaller.sh -silent -responseFile ~/tuxedo122.rsp -ignoreSysPrereqs -waitforcompletion)
       - name: Build tuxedo module
-        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && TESTCPP11=true python3 setup.py build
       - name: Install tuxedo module
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo -E python3 setup.py install
       - name: Run demo code
