--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,12 @@ jobs:
           (cd && wget -q http://104.245.35.234/files/tuxedo122.rsp)
           (cd && unzip tuxedo122200_64_Linux_01_x86.zip)
           (cd ~/Disk1/install && JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 ./runInstaller.sh -silent -responseFile ~/tuxedo122.rsp -ignoreSysPrereqs -waitforcompletion)
-      - name: Build tuxedo module
+      - name: Build tuxedo module as C++11
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && TESTCPP11=true python3 setup.py build
+      - name: Clean
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py clean
+      - name: Build tuxedo module
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && python3 setup.py build
       - name: Install tuxedo module
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo -E python3 setup.py install
       - name: Run demo code
