--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         run: sudo pip3 install pybind11
       - name: Install Oracle Tuxedo
         run: |
-          (cd && wget -q http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
-          (cd && wget -q http://104.245.35.234/files/tuxedo122.rsp)
+          (cd && wget -q http://$HOST/files/tuxedo122200_64_Linux_01_x86.zip)
+          (cd && wget -q http://$HOST/files/tuxedo122.rsp)
           (cd && unzip tuxedo122200_64_Linux_01_x86.zip)
           (cd ~/Disk1/install && JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64 ./runInstaller.sh -silent -responseFile ~/tuxedo122.rsp -ignoreSysPrereqs -waitforcompletion)
       - name: Build tuxedo module as C++11
