--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Install pybind11
         run: sudo pip3 install pybind11
       - name: Install Oracle Tuxedo
+        env:
+          credentials: ${{ secrets.HOST }}
         run: |
           (cd && wget -q http://$HOST/files/tuxedo122200_64_Linux_01_x86.zip)
           (cd && wget -q http://$HOST/files/tuxedo122.rsp)
