--- a/.github/workflows/py2.yml
+++ b/.github/workflows/py2.yml
@@ -14,7 +14,7 @@ jobs:
         run: sudo apt update && sudo apt-get install gcc-8 python-pip python-setuptools openjdk-8-jdk
       - uses: actions/checkout@v2
       - name: Install pybind11
-        run: sudo pip3 install pybind11
+        run: sudo pip install pybind11
       - name: Install Oracle Tuxedo
         run: |
           (cd && wget -q http://104.245.35.234/files/tuxedo122200_64_Linux_01_x86.zip)
