--- a/.github/workflows/py3.yml
+++ b/.github/workflows/py3.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Install tuxedo module
         run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && sudo -E python3 setup.py install
       - name: Run demo code
-        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo && make
+        run: source /home/runner/Oracle/tuxedo12.2.2.0.0/tux.env && cd demo/py3 && make
