--- a/demo/py3/ubbconfig.in
+++ b/demo/py3/ubbconfig.in
@@ -4,7 +4,7 @@ MODEL SHM
 IPCKEY 32769
 
 *MACHINES
-"@UNAME@" LMID=tuxapp APPDIR="@CURDIR@" TUXCONFIG="@CURDIR@/tuxconfig" TUXDIR="@TUXDIR@"
+"@UNAME@" LMID=tuxapp APPDIR="@CURDIR@" TUXCONFIG="@CURDIR@/t" TUXDIR="@TUXDIR@"
 
 *GROUPS
 GROUP1 LMID=tuxapp GRPNO=1
